Solved many warning, moved to target API 17